# patient-management

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  requirements.txt
_posts/2024-08-14-welcome-to-jekyll/: index.html
about/: index.html
backend/: .flake8  .pre-commit-config.yaml  Makefile  README.md  configure.sh  example.env  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/_docs/: patient-management.drawio
backend/_docs/er_diagram/raw/: patient_management.mdj
backend/account/: admin.py  apps.py
backend/account/domain/models/: manager.py  profile.py  user.py
backend/contrib/: app_config.py
backend/patient_management/: asgi.py  urls.py  wsgi.py
backend/patient_management/core/: models.py
backend/patient_management/settings/: base.py  development.py
code/: authentication.py  main.py  utils.py
code/auth/: backend.py  constants.py  token.py
docs/: about.md  index.md
docs/_posts/: 2024-08-14-welcome-to-jekyll.markdown
docs/home/: index.md
docs/project/patient-management/: index.md
docs/projects/patient-management/: index.md  software_requirements.md
documentation/: api_documentation.md
frontend/: package-lock.json
frontend/core/: README.md  angular.json  package-lock.json  package.json
frontend/core/src/: index.html
frontend/src/: index.html
home/: index.html
project/patient-management/: index.html
projects/patient-management/: index.html
search/: search_index.json
site/: 404.html  index.html
site/about/: index.html
site/search/: search_index.json
(+18 files in other folders)
