[project]
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".vscode",
    "__pypackages__",
    "venv",
    "./*/migrations/*",
]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "D"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"patient_management/settings/development.py" = ["F405", "F403", "F401"]
"patient_management/settings/base.py" = ["E501", "F401"]


[tool.mypy]
strict = "true"
ignore_missing_imports = "true"
exclude = [
    "^.*\b(migrations)\b.*$",
]
